Added color and bg to UI

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 
 </head>
 <body>
-<div class="container">
+
+      <!--   <img src="assets/images/train-tracks-bg.jpg" class="img-responsive" alt="Responsive image">
+        <div class="sol-sm-6"></div>  -->     
+
+    <div class="container">
               <div class="jumbotron jumbotron-black">
                 <h1 class="h1-color">The 100 Miles an hour Train</h1>
                 <p>A Comprehensive Directory into the brain of the millenial</p>
@@ -73,8 +77,11 @@
             <button type="button" class="btn btn-primary" id="add-train">Submit</button>
           </div>
         </div>
+    
+</div>
 </form>
 </div>
+
 
 <!-- Init all scipts url's -->
 <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
